<resources>
    <string name="app_name">RemoteControllSystem</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="driving_status_title">운행 정보</string>
    <string name="no_description">설명없음</string>
    <string name="driving_status">운행 상태</string>
    <string name="driving_distance_title">운행 거리</string>
    <string name="remain_distance_title">목적지까지 거리</string>
    <string name="car_info_title">차량 정보</string>
    <string name="battery">배터리</string>
    <string name="topic_name">Topic Name</string>
    <string name="message_type">Message Type</string>
    <string name="message_type_ko">메시지 타입</string>
    <string name="topic_name_ko">토픽명</string>
    <string name="function_name_ko">기능명</string>
    <string name="setting_message">메시지 설정</string>
    <string name="setting_enviroment">환경설정</string>
    <string name="dashboard">대시보드</string>
    <string name="setting_message_ko">메시지 설정</string>
    <string name="no_title_ko">제목 없음</string>
    <string name="pose_x">X좌표</string>
    <string name="pose_y">Y좌표</string>
    <string name="pose_z">Z좌표</string>
    <string name="pose_w">W좌표</string>
    <string name="route">주행 경로</string>
    <string name="connect_to_car">차량 연결</string>
    <string name="connect">연결</string>
    <string name="mqtt_address_ex">tcp://10.223.188.12:1883</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="car_connect">차량 연결</string>
    <string name="rtsp_front_connect">전방 카메라 연결</string>
    <string name="rtsp_url_ex">rtsp://192.168.30.5:8554/rcs</string>
    <string name="rtsp_rear_connect">후방 카메라 연결</string>
    <string name="control_car">차량제어</string>
    <string name="ugv_address_title">차량 주소 :</string>
    <string name="rtsp_front_address_title">전방 카메라 주소 :</string>
    <string name="rtsp_rear_address_title">후방 카메라 주소 :</string>
</resources>