<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_driving"
        android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard_menu"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/manual_control_menu"
            android:title="수동조작"/>
        <item
            android:id="@+id/route_menu"
            android:title="주행 경로 설정"/>
    </group>
    <group
        android:id="@+id/group_setting"
        android:checkableBehavior="single">
        <item android:title="@string/setting_enviroment">
            <menu>
                <item
                    android:id="@+id/edit_topic_menu"
                    android:title="@string/setting_message_ko"/>
            </menu>
        </item>
    </group>
</menu>