<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/color_contents_background"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_data_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/function_name_ko"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tl_topic_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_topic_name"
        style="@style/EditTextStyleContents"
        android:layout_width="0dp"
        app:boxBackgroundColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/topic_name_ko"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tl_message_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_data_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_topic_name"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/topic_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_message_type"
        style="@style/EditTextStyleContents"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/message_type_ko"
        app:boxBackgroundColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tl_topic_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tl_topic_name"
        app:layout_constraintTop_toTopOf="@+id/tl_topic_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_message_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:focusable="false"
            android:text="@string/message_type" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>