<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_contents_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.3"
        app:srcCompat="@drawable/ugv" />

    <TextView
        android:id="@+id/tv_ugv_name"
        style="@style/TextTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="UGV"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_ugv_mqtt_address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ugv_address_title"
        style="@style/TextContentsStyleLv2"
        app:layout_constraintStart_toStartOf="@+id/tv_ugv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_ugv_name" />

    <TextView
        android:id="@+id/tv_ugv_mqtt_address"
        style="@style/TextContentsStyleLv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/mqtt_address_ex"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ugv_mqtt_address_title"
        app:layout_constraintStart_toEndOf="@+id/tv_ugv_mqtt_address_title"
        app:layout_constraintTop_toTopOf="@+id/tv_ugv_mqtt_address_title" />


    <TextView
        android:id="@+id/tv_ugv_front_rtsp_address_title"
        style="@style/TextContentsStyleLv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rtsp_front_address_title"
        app:layout_constraintStart_toStartOf="@+id/tv_ugv_mqtt_address_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_ugv_mqtt_address_title" />

    <TextView
        android:id="@+id/tv_ugv_front_rtsp_address"
        style="@style/TextContentsStyleLv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/rtsp_url_ex"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ugv_front_rtsp_address_title"
        app:layout_constraintStart_toEndOf="@+id/tv_ugv_front_rtsp_address_title"
        app:layout_constraintTop_toTopOf="@+id/tv_ugv_front_rtsp_address_title" />

    <TextView
        android:id="@+id/tv_ugv_rear_rtsp_address_title"
        style="@style/TextContentsStyleLv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rtsp_rear_address_title"
        app:layout_constraintStart_toStartOf="@+id/tv_ugv_front_rtsp_address_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_ugv_front_rtsp_address_title" />

    <TextView
        android:id="@+id/tv_ugv_rear_rtsp_address"
        style="@style/TextContentsStyleLv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/rtsp_url_ex"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ugv_rear_rtsp_address_title"
        app:layout_constraintStart_toEndOf="@+id/tv_ugv_rear_rtsp_address_title"
        app:layout_constraintTop_toTopOf="@+id/tv_ugv_rear_rtsp_address_title" />
</androidx.constraintlayout.widget.ConstraintLayout>